# npm-github-activity-dashboard

./: README.md
reports/dashboard/: README.md  all_user_commit-30d.sh  all_user_commit-YT.sh  all_user_commit-YTD.sh  all_user_commit.mjs  all_user_commit.openapi.json  all_user_commit.py  developer_insights-30d.sh  developer_insights-YT.sh  developer_insights-YTD.sh  developer_insights.mjs  developer_insights.openai.json  developer_insights.openapi.json  developer_insights.py  github_user_status.mjs  github_user_status.openapi.json  github_user_status.sh  package-lock.json  package.json  pyproject.toml  requirements.txt
reports/dashboard/src/: main.jsx
reports/dashboard/src/report/all_user_commit/: main.css  main.jsx
reports/dashboard/src/report/developer_insights/: main.css  main.jsx
